; ModuleID = '/home/carl/AnghaBench/freebsd/stand/efi/loader/extr_framebuffer.c_efifb_mask_from_pixfmt.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/efi/loader/extr_framebuffer.c_efifb_mask_from_pixfmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efi_fb = type { i32, i32, i32, i32 }
%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.efi_fb*, i32, %struct.TYPE_3__*)* @efifb_mask_from_pixfmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @efifb_mask_from_pixfmt(%struct.efi_fb* %0, i32 %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca %struct.efi_fb*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  store %struct.efi_fb* %0, %struct.efi_fb** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %48 [
    i32 128, label %9
    i32 129, label %18
    i32 130, label %27
  ]

9:                                                ; preds = %3
  %10 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %11 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %10, i32 0, i32 0
  store i32 255, i32* %11, align 4
  %12 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %13 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %12, i32 0, i32 1
  store i32 65280, i32* %13, align 4
  %14 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %15 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %14, i32 0, i32 2
  store i32 16711680, i32* %15, align 4
  %16 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %17 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %16, i32 0, i32 3
  store i32 -16777216, i32* %17, align 4
  br label %49

18:                                               ; preds = %3
  %19 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %20 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %19, i32 0, i32 0
  store i32 16711680, i32* %20, align 4
  %21 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %22 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %21, i32 0, i32 1
  store i32 65280, i32* %22, align 4
  %23 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %24 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %23, i32 0, i32 2
  store i32 255, i32* %24, align 4
  %25 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %26 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %25, i32 0, i32 3
  store i32 -16777216, i32* %26, align 4
  br label %49

27:                                               ; preds = %3
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %32 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 4
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %37 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %36, i32 0, i32 1
  store i32 %35, i32* %37, align 4
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 2
  %40 = load i32, i32* %39, align 4
  %41 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %42 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %41, i32 0, i32 2
  store i32 %40, i32* %42, align 4
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 3
  %45 = load i32, i32* %44, align 4
  %46 = load %struct.efi_fb*, %struct.efi_fb** %4, align 8
  %47 = getelementptr inbounds %struct.efi_fb, %struct.efi_fb* %46, i32 0, i32 3
  store i32 %45, i32* %47, align 4
  br label %49

48:                                               ; preds = %3
  store i32 1, i32* %7, align 4
  br label %49

49:                                               ; preds = %48, %27, %18, %9
  %50 = load i32, i32* %7, align 4
  ret i32 %50
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
